✨ Major UI/UX Enhancement: Complete WanderMind Redesign
🎨 Enhanced Hero Section:
- Redesigned 'How The Magic Happens' section with animated boxes
- Added staggered entrance animations (slide-in-left, fade-in-up, slide-in-right)
- Enhanced hover effects with colored shadows and scale animations
- Added floating background particles and animated shapes
- Improved typography with gradient text and better spacing

🌟 New Animated Logo:
- Created custom AnimatedLogo component matching brand design
- Globe with airplane orbital animation
- Floating particles and gradient effects
- Replaced static logo in header and dialogs

🚀 Dynamic Interactive Features:
- Implemented DynamicStats with real-time updates
- Added FeedbackWidget with 5-star rating system
- Created AnimatedHeroImage with animation/map toggle
- Added InteractiveTravelMap with destination markers
- Integrated FeedbackService for persistent data

🎯 Improved Destinations Section:
- Redesigned 'Trending India Destinations' with rich cards
- Added category badges, ratings, and highlights
- Enhanced hover effects and staggered animations
- Improved responsive grid layout

🔧 Technical Improvements:
- Added custom CSS animations (fadeInUp, slideInLeft, slideInRight, float)
- Enhanced favicon system with SVG icons and PWA manifest
- Improved SEO with meta tags and social media previews
- Added theme support and dark mode compatibility
- Enhanced accessibility and responsive design

📱 PWA Features:
- Created web app manifest for mobile installation
- Added Apple touch icons and favicon variants
- Enhanced meta tags for better social sharing

🎨 Animation Enhancements:
- Background particle animations with varied timing
- Hover state improvements with color transitions
- Interactive elements with smooth scaling effects
- Staggered animation delays for natural flow

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderMind</title>
-    <script type="module">
-      import.meta.env.VITE_GOOGLE_PLACE_API_KEY && document.write(`<script src="https://maps.googleapis.com/maps/api/js?key=${import.meta.env.VITE_GOOGLE_PLACE_API_KEY}&libraries=places"><\/script>`);
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WanderMind - AI-Powered Travel Planning</title>
+
+  <!-- Favicon and App Icons -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon-32x32.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Meta Tags for Better SEO -->
+  <meta name="description"
+    content="Transform your travel dreams into reality with AI-powered trip planning. Personalized itineraries, real-time adaptations, and seamless booking." />
+  <meta name="keywords" content="travel planning, AI travel, trip planner, vacation planning, travel itinerary" />
+  <meta name="author" content="WanderMind" />
+  <meta name="theme-color" content="#3B82F6" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="WanderMind - AI-Powered Travel Planning" />
+  <meta property="og:description" content="Transform your travel dreams into reality with AI-powered trip planning" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/apple-touch-icon.svg" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="WanderMind - AI-Powered Travel Planning" />
+  <meta name="twitter:description" content="Transform your travel dreams into reality with AI-powered trip planning" />
+  <meta name="twitter:image" content="/apple-touch-icon.svg" />
+
+  <script type="module">
+    import.meta.env.VITE_GOOGLE_PLACE_API_KEY && document.write(`<script src="https://maps.googleapis.com/maps/api/js?key=${import.meta.env.VITE_GOOGLE_PLACE_API_KEY}&libraries=places"><\/script>`);
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
